--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,10 @@ pkm/.obsidian/plugins/auto-tag/
 pkm/.obsidian/plugins/ai-web/
 
 # OR only to exclude workspace cache
-.obsidian/workspace.json
+pkm/.obsidian/workspace.json
 
 # to exclude workspace cache specific to mobile devices
-.obsidian/workspace-mobile.json
+pkm/.obsidian/workspace-mobile.json
 
 # Add below lines to exclude OS settings and caches
 .trash/
